fixed padding and margin of cards on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,11 @@ img {
       margin-left: 0px;
       grid-template-columns: repeat(auto-fit, 50%);
     }
+
+    .outer {
+      margin: 20px;
+      padding: 10px;
+    }
   }
 
 /******************************************
